--- a/index.html
+++ b/index.html
@@ -1,13 +1,51 @@
 <meta charset="UTF-8">
 <html>
-<head>
-امیرعباس کشایی
-</br>
-</title>
-</head>
-<body>
-	دانشجوی رشته مهندسی نرم افزار دانشگاه کاشان
-</br>
-	9521171217
-</body>
+
+	<head>
+		<title>IE990720Excercise</title>
+		<h1>IE990720Excercise</h1>
+	</head>
+
+	<body>
+		</br>
+		<span style="font-size: 32px; margin: 21px 0; display: block;">Crowd Survey Systems</span>
+		<p>This Page is prepared for Github Pages!</p>
+
+		</br>
+
+		<h2>فهرست </h2>
+
+		<ol>
+			<li><b>فصل اول: مقدمه و تاریخچه</b>
+				<ul>
+
+					<li>نظرسنجی شهری</li>
+					<li>بررسی مدلهای ناکارآمد</li>
+					<li> ارائه مدل پیشنهادی</li>
+				</ul>
+
+			</li>
+		</ol>
+
+		</br>
+
+		<h2>فصل اول: مقدمه و تاریخچه</h2>
+		<p>هدف نهایی هر سازمان یا کسب و کار موفقی، جلب رضایت آخرین حلقه آن سیستم یعنی مشتری است. </p>
+
+		</br>
+
+		<h3>نظرسنجی شهری</h3>
+		<p>نظرسنجی های شهری با دو هدف مهم طراحی می شوند: اول اینکه نظر شهروندان در مورد عملکرد هر بخش از شهرداری چیست و از کدام بخش رضایت دارند. </p>
+
+		</br>
+
+		<h3>بررسی مدلهای ناکارآمد</h3>
+		<p>انجام نظرسنجی در هر زمینه ای از پیچیدگی های خاص خود برخوردار است. از چالش های اصلی هر نظرسنجی میتوان به این اشاره کرد که چگونه میتوان با انجام یک نظرسنجی اطلاعات مفید و مورد نیاز را به دست آورد.</p>
+
+		</br>
+
+		<h3>ارائه مدل پیشنهادی</h3>
+		<p>برای برطرف کردن موثر دو چالش اولی که مطرح شد یعنی «کسب اطلاعات مفید از نظرسنجی ها» و «درست بودن هدف از انجام یک نظرسنجی» پیشنهاد می شود طرح سوالات نظرسنجی ها بر عهده خود مردم باشد.</p>
+
+	</body>
 </html>
